[package]
name = "lightmq"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[example]]
name="test"
path="examples/send_msg.rs"

[[bin]]
name="lightmdq"
path="src/bin/lightmqd.rs"
#[[bin]]
#name="nfc_client"
#path="src/bin/client.rs"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
bytes = "1.1.0"
clap = {version = "4.2.1", features = ["derive"]}
#config = "0.13.3"
futures = "0.3.17"
lazy_static = "1.4.0"
log = "0.4.14"
log4rs = "1.0.0"
#rust-crypto = "0.2.36"
#bincode="1.3.3"
#rustls-pemfile = "1.0.2"
#rustls = "0.21.0"
#tokio-rustls="0.24.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.79"
thiserror = "1.0.31"
tokio = {version = "1.26.0", features = ["full", "macros"]}
#webpki-roots = "0.23.0"
toml="0.7.3"